--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <body style="margin: 0px">
         <script type="module">
-            import init from "./mygame.js";
+            import init from "./out/mygame.js";
 
             init().catch((error) => {
                 if (
